# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "interprog"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Inter-process progress reports made easy"
homepage = "https://github.com/ThatXliner/interprog"
repository = "https://github.com/ThatXliner/interprog/tree/main/src/rust"
readme = "README.md"
keywords = ["ipc", "progress", "interprog"]

[dependencies]
serde = { version = "^1.0.152", features = ["derive"] }
serde_json = "^1.0.93"
thiserror = "^1.0.38"
